--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "nodejs-apns-secure",
   "description": "New reliable nodejs library for sending notifications via apns",
-  "version": "2.0.0",
+  "version": "2.0.21-alpha",
   "author": "Luka Blazecki <blazecki@gmail.com>",
-  "keywords": ["apple", "push", "apns", "push notifications", "iOS", "notifications"],
+  "keywords": [
+    "apple",
+    "push",
+    "apns",
+    "push notifications",
+    "iOS",
+    "notifications"
+  ],
   "main": "index.js",
   "bugs": {
-      "email": "blazecki@gmail.com",
-      "url": "https://github.com/lblazecki/nodejs-apns-secure/issues"
-   },
+    "email": "blazecki@gmail.com",
+    "url": "https://github.com/lblazecki/nodejs-apns-secure/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/lblazecki/nodejs-apns-secure.git"
   },
   "dependencies": {
-      "lodash": "2.4.1",
-      "bluebird": "2.3.2",
-      "debug": "^0.7.4"
+    "lodash": "2.4.1",
+    "bluebird": "2.3.2",
+    "debug": "^0.7.4"
   },
-  "engines": { "node": ">= 0.8.16" },
+  "engines": {
+    "node": ">= 0.8.16"
+  },
   "license": "MIT"
 }
-
